bookface_auto.css
/* ... */
		p.wall-item-announce,
		.media .time, .media .shared-time,
		.media .delivery, .media .location,
		.media .location a {
			font-size: 13px !important;
		}
			.type-link, .type-video {
				padding: 0 !important;
				margin:  0 !important;
				background-color: rgb(240, 242, 245) !important;
				border: 1px solid rgb(208,211,215) !important;
			}
			.type-link h4, .type-link blockquote, .type-link sup,
			.type-video h4, .type-video blockquote, .type-video sup {
				padding-left: 10px !important;
				padding-right: 10px !important;
			}
       /* keep mentions and tags from spilling out */
       #profile-page .label,
       #profile-page .label a,
       .wall-item-bottom .label, 
       .wall-item-bottom .label a {
            display: inline-block !important;
       }
		/* ACTION BUTTON LABELS */
		.wall-item-actions-row button,
		.wall-item-actions-right button {
		    position: relative;
			display: block;
			white-space: normal !important;
			margin: 0 auto !important;
			/* frio -webkit-box-shadow */
			/* frio box-shadow */
		}
		.wall-item-actions-row button::after,
		.wall-item-actions-right button::after {
			font-size: 14px;
			font-family: sans-serif;
			display: block;
			margin-top: 2px;
		}
		.wall-item-response {
		    position: relative;
			overflow: visible !important;
			display: block;
		}
		.button-comments::after {
			content: var(--comment-button-text);
		}
		.button-announces::after {
			content: var(--share-button-text);
		}
			.share-links .dropdown-toggle::after {
				content: var(--share-button-text);
			}
		.button-votes::after {
			content: var(--quote-button-text);
		}
		.button-likes::after {
			content: var(--like-button-text);
		}
	 	[id^="dislike-"]::after{
		 	content: var(--dislike-button-text);
	 	}
		.wall-item-actions-right .dropdown-toggle::after,
		.more-links .dropdown-toggle::after {
			content: var(--more-button-text);
		}
		/* engagement counts */
		.wall-item-actions-row > button span,
		.wall-item-response span {
			position: absolute;
			text-align: center;
			display: block;
			background-color: var(--count-bg);
			box-shadow: -1px 1px 1px #fff;
			border-radius: 4px;
			color: var(--count-color);
			font-size: 12px;
			font-weight: 700;
			width: fit-content;
			padding: 0px 7px;
			left: 55%;
			top: 0px;
			z-index: 1;
		}
		/* event response buttons */
		.vote-event:has(button) {
			padding-bottom: 135px;
		}
		.vote-event:has(button) .wall-item-response {
			position: absolute;
			top: 63px;
		}
		.vote-event .wall-item-response:empty{
			display: none;
		}
		.vote-event:has(button) .wall-item-response:nth-of-type(1){
			left: 15px;
		}
		.vote-event .wall-item-response:nth-of-type(1) .button-event::after,
		[id^="attendyes"]::after{
			content: var(--attendyes-button-text);
		}
		.vote-event:has(button) .wall-item-response:nth-of-type(2){
			left: 105px;
		}
		.vote-event .wall-item-response:nth-of-type(2) .button-event::after,
		[id^="attendno"]::after{
			content: var(--attendno-button-text);
			position: relative;
			height: 20px;
			overflow: hidden; /* or skews mobile button layout */
		}
		.vote-event:has(button) .wall-item-response:nth-of-type(3){
			left: 204px;
		}
		.vote-event .wall-item-response:nth-of-type(3) .button-event::after,
		[id^="attendmaybe"]::after{
			content: var(--attendmaybe-button-text);
		}
		/* prevent "Like Like" and "Dislike Dislike" on photos */
		#photo-view-wrapper .wall-item-actions .button-likes {
			font-color: transparent !important;
			font-size: 0px !important;
		}
			#photo-view-wrapper .wall-item-actions .button-likes::after {
				font-size: 18px !important;
				color: var(--nav-icon-color) !important;
			}
			#photo-view-wrapper .wall-item-actions .button-likes .fa-thumbs-up,
			#photo-view-wrapper .wall-item-actions .button-likes .fa-thumbs-down {
				font-size: 24px !important;
				color: var(--nav-icon-color) !important;
			}
				#photo-view-wrapper .wall-item-actions .button-likes:hover::after,
				#photo-view-wrapper .wall-item-actions .button-likes:focus::after,
				#photo-view-wrapper .wall-item-actions .button-likes:hover .fa-thumbs-up,
				#photo-view-wrapper .wall-item-actions .button-likes:focus .fa-thumbs-up,
				#photo-view-wrapper .wall-item-actions .button-likes:hover .fa-thumbs-down,
				#photo-view-wrapper .wall-item-actions .button-likes:focus .fa-thumbs-down {
					color: var(--link-color) !important;
				}
		/* END OF ACTION BUTTON LABELS */	
	/* Compose and Reply */
	#jot-modal .modal-header .compose-link {
		border-radius: 100% !important;
		height: 36px;
		width: 36px;
		font-size: 27px !important;
		padding: 0 6px !important;
		background-color: rgba(0,0,0,.1);
	}
		#jot-modal .modal-header .compose-link:hover,
		#jot-modal .modal-header .compose-link:focus {
			background-color: rgba(0,0,0,.2);
		}
	.close {
		height: 36px;
		width: 36px;
		background-color: var(--link-color) !important;
		opacity: 1 !important;
		color: #fff !important;
		border-radius: 100%;
		margin-top: 5px;
		margin-top: 2px !important;
	}
	.close:hover,
	.close:focus {
		  box-shadow: inset rgba(0,0,0,.2) !important;
	}
	.modal-content,
	#jot-modal-content,
	.wall-item-comment-wrapper {
		background-color: #fff !important;
		border-radius: 15px !important;
		background-image: none;   
	}
		.wall-item-comment-wrapper {
			border: none;
		}
		.photo-comment-wrapper .btn-sm,
		#profile-jot-wrapper .btn-sm,
		.wall-item-comment-wrapper .btn-sm {
			background-color: transparent;
			color: var(--nav-icon-color);
			height: 45px;
			width:  45px;
			font-size: 18px;
		}
			.photo-comment-wrapper .btn-sm:hover,
			.photo-comment-wrapper .btn-sm:focus,
			#profile-jot-wrapper .btn-sm:hover,
			#profile-job-wrapper .btn-sm:focus,
			.wall-item-comment-wrapper .btn-sm:hover,
			.wall-item-comment-wrapper .btn-sm:focus {
				background-color: transparent;
				color: var(--link-color);
			} 
/* ... */

